--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -1,6 +1,6 @@
 ﻿header {
-    background: #fff;
-    border-bottom: 1px solid #000;
+    background-color: #fafafa;
+    /*border-bottom: 1px solid #000;*/
     color: #000;
     height: 110px;
     line-height: 110px;
