--- a/app/styles/portfolio.css
+++ b/app/styles/portfolio.css
@@ -13,9 +13,9 @@
 }
 
 .portfolioWrapper {
-/*    padding: 0 0 0 100px;*/
+    /*    padding: 0 0 0 100px;*/
     margin: 0 auto;
-    width: 50%;
+    width: 80%;
 }
 
 .projectBullet {
@@ -54,8 +54,8 @@
 }
 
 .projectDesktopImage {
-    height: 100%;
-    width: 100%;
+    height: 70%;
+    width: 70%;
 }
 
 .projectMobileDisplay {
@@ -64,8 +64,8 @@
 }
 
 .projectPhoneImage {
-    height: 80%;
-    width: 80%;
+    height: 60%;
+    width: 60%;
 }
 
 .projectSection {
